[metadata]
name = approx_query_engine
version = 0.1.0
author = Saumya Ranjan, Saatvik Pandey
description = Approximate Query Engine with SQL-like syntax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saumyarr8/approx_query_engine
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10

[build_ext]
inplace=1